fixing the scroll bug on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,3 +35,9 @@ body {
   /* tailwind font-bold = */
   font-weight: 700;
 }
+
+@media screen and (min-width: 640px) {
+  .no-scroll-on-mobile {
+    touch-action: none;
+  }
+}
